--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
 version: "3.9"
 services:
-  webapp:
-    build: ./
+  blender:
+    build:
+      context: .
+      target: dev
+    volumes:
+    - ./:/usr/src/app
+    command: /bin/sh -c "while sleep 1000; do :; done"
