--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [flake8]
 max-line-length = 88
-extend-ignore = E203
+extend-ignore =
+  E203, # Whitespace before ':'
+  Q000, # Double quotes
+  WPS305 # F string
 
 [mypy]
 ignore_missing_imports = True
