--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,6 +17,7 @@
   },
   "extensions": [
       "ms-python.python",
+      "jacqueslucke.blender-development"
   ],
   "shutdownAction": "stopCompose"
 }
