Fix for directory restructuring

--- a/bpy/.devcontainer/devcontainer.json
+++ b/bpy/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Python Project",
-  "dockerComposeFile":"../docker-compose.yml",
+  "dockerComposeFile":"../../docker-compose.yml",
   "service": "blender",
   "workspaceFolder": "/usr/src/app",
   "settings": {
