--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   blender:
     build:
-      context: .
+      context: ./bpy
       target: dev
     volumes:
     - ./:/usr/src/app
