Add docker plugin to devcontainer

--- a/bpy/.devcontainer/devcontainer.json
+++ b/bpy/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
   },
   "extensions": [
       "ms-python.python",
-      "jacqueslucke.blender-development"
+      "jacqueslucke.blender-development",
+      "ms-azuretools.vscode-docker"
   ],
   "shutdownAction": "stopCompose"
 }
