--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,5 @@ services:
       context: ./bpy
       target: dev
     volumes:
-    - ./:/usr/src/app
-    - ./bpy/.venv:/usr/src/app/.venv # workaround
+    - ./:/usr/src/dev
     command: /bin/sh -c "while sleep 1000; do :; done"
