--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     volumes:
     - ./:/usr/src/dev
     command: /bin/sh -c "while sleep 1000; do :; done"
+  next:
+    build:
+      context: ./next
+    volumes:
+    - ./:/usr/src/dev
+    command: /bin/sh -c "while sleep 1000; do :; done"
