--- a/bpy/pyproject.toml
+++ b/bpy/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["cactice <14835424+Cactice@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "^7.1.2"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.1"
