--- a/bpy/.devcontainer/devcontainer.json
+++ b/bpy/.devcontainer/devcontainer.json
@@ -21,5 +21,5 @@
       "ms-azuretools.vscode-docker"
   ],
   "shutdownAction": "stopCompose",
-  "postAttachCommand": "cp -r /usr/src/app/.venv/ /usr/src/dev/bpy &"
+  "postAttachCommand": "cp -r /usr/src/app/.venv /usr/src/dev/bpy"
 }
