--- a/next/package.json
+++ b/next/package.json
@@ -15,6 +15,15 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.6",
+    "prettier": "^2.1.1",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
