--- a/bpy/setup.cfg
+++ b/bpy/setup.cfg
@@ -4,6 +4,7 @@ extend-ignore =
   E203, # Whitespace before ':'
   Q000, # Double quotes
   WPS305 # F string
+max-local-variables = 7
 
 [mypy]
 ignore_missing_imports = True
