--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: ./bpy
+          file: ./dockerfile
           push: true
           tags: user/app:latest
           cache-from: type=registry,ref=user/app:latest
