--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,7 +25,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./bpy
-          file: ./bpy/dockerfile
+          file: ./bpy/Dockerfile
           push: true
           tags: user/app:latest
           cache-from: type=registry,ref=user/app:latest
