--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
           context: ./bpy
           file: ./bpy/Dockerfile
           push: true
-          tags: user/app:latest
+          tags: cactice/sverchok:latest
           cache-from: type=registry,ref=user/app:latest
           cache-to: type=inline
       -
