Fix install_sverchok not available

--- a/bpy/Dockerfile
+++ b/bpy/Dockerfile
@@ -10,4 +10,5 @@ RUN \
   poetry config virtualenvs.in-project true && \
   poetry install --no-dev
 RUN cp -rf /usr/src/app/.venv/lib/* /bin/2.91/python/lib
+COPY install_sverchok.py ./
 RUN blender -P install_sverchok.py -b
