--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,6 +6,33 @@ on:
       - main
 
 jobs:
+  blender:
+    runs-on: ubuntu-20.04
+    container: cactice/sverchok:latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Cache
+        id: cache-glb
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
+      -
+        name: Generate glb
+        if: steps.cache-glb.outputs.cache-hit != 'true'
+        working-directory: ./bpy
+        run: |
+          blender -P install_sverchok.py -b
+          blender -P json_to_glb.py -b --input_dir=../sverchok/ empty.blend
+      -
+        name: Upload glb
+        if: steps.cache-glb.outputs.cache-hit != 'true'
+        uses: actions/upload-artifact@v2
+        with:
+          name: glb-dir
+          path: ./next/public/glb/
   deploy:
     runs-on: ubuntu-20.04
     defaults:
@@ -31,8 +58,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - name: Download glb files
+        uses: actions/download-artifact@v2
+        with:
+          name: glb-dir
+          path: ./next/public/glb
+      - name: Yarn install and build
+        run: |
+        yarn install --frozen-lockfile
+        yarn build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
