--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-20.04
     container: cactice/sverchok:latest
     steps:
-      - name: Checkout
+      -
+        name: Checkout
         uses: actions/checkout@v2
       -
         name: Cache
