--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -40,7 +40,9 @@ jobs:
       run:
         working-directory: ./next
     steps:
-      - uses: actions/checkout@v2
+      -
+        name: Checkout
+        uses: actions/checkout@v2
 
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
