--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -68,6 +68,7 @@ jobs:
           path: ./next/public/glb
       - name: Yarn install and build
         run: |
+          rm ./public/glb/.gitignore
           yarn install --frozen-lockfile
           yarn build
 
