--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -34,7 +34,6 @@ jobs:
           name: glb-dir
           path: ./next/public/glb/
   deploy:
-    needs: [blender]
     runs-on: ubuntu-20.04
     defaults:
       run:
@@ -61,11 +60,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      -
+        name: Cache
+        id: cache-glb
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
+
       - name: Download glb files
+        if: steps.cache-glb.outputs.cache-hit != 'true'
+        needs: [blender]
         uses: actions/download-artifact@v2
         with:
           name: glb-dir
           path: ./next/public/glb
+
       - name: Yarn install and build
         run: |
           rm ./public/glb/.gitignore
