--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   blender:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     container: cactice/sverchok:latest
     steps:
       -
@@ -34,7 +34,8 @@ jobs:
           name: glb-dir
           path: ./next/public/glb/
   deploy:
-    runs-on: ubuntu-20.04
+    needs: [blender]
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./next
@@ -60,17 +61,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      -
-        name: Cache
-        id: cache-glb
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
-
       - name: Download glb files
-        if: steps.cache-glb.outputs.cache-hit != 'true'
-        needs: [blender]
         uses: actions/download-artifact@v2
         with:
           name: glb-dir
