--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,12 +27,12 @@ jobs:
         run: |
           blender -P install_sverchok.py -b
           blender -P json_to_glb.py -b --input_dir=../sverchok/ empty.blend
-      -
-        name: Upload glb
-        uses: actions/upload-artifact@v2
-        with:
-          name: glb-dir
-          path: ./next/public/glb/
+      # -
+      #   name: Upload glb
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: glb-dir
+      #     path: ./next/public/glb/
   deploy:
     needs: [blender]
     runs-on: ubuntu-latest
@@ -61,11 +61,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Download glb files
-        uses: actions/download-artifact@v2
+      -
+        name: Cache
+        id: cache-glb
+        uses: actions/cache@v2
         with:
-          name: glb-dir
-          path: ./next/public/glb
+          path: ./next/public/glb/**
+          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
+      # - name: Download glb files
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: glb-dir
+      #     path: ./next/public/glb
 
       - name: Yarn install and build
         run: |
