--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,6 +13,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
+      - name: install zstd
+        run: sudo apt-get install -y zstd
       -
         name: Cache
         id: cache-glb
