--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -10,20 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     container: cactice/sverchok:latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: install zstd
+      - name: install zstd # https://github.com/actions/cache/issues/520#issuecomment-771813238
         run: apt-get install -y zstd
-      -
-        name: Cache
+      - name: Cache
         id: cache-glb
         uses: actions/cache@v2
         with:
           path: ./next/public/glb/**
-          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
-      -
-        name: Generate glb
+          key: ${{ hashFiles('./sverchok/**') }}-glb
+      - name: Generate glb
         if: steps.cache-glb.outputs.cache-hit != 'true'
         working-directory: ./bpy
         run: |
@@ -42,14 +39,13 @@ jobs:
       run:
         working-directory: ./next
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
         with:
-          node-version: '12.x'
+          node-version: "12.x"
 
       - name: Get yarn cache
         id: yarn-cache
@@ -63,13 +59,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      -
-        name: Cache
+      - name: Cache
         id: cache-glb
         uses: actions/cache@v2
         with:
           path: ./next/public/glb/**
-          key: ${{ hashFiles('./next/public/glb/**')  }}-glb
+          key: ${{  hashFiles('./sverchok/**')  }}-glb
       # - name: Download glb files
       #   uses: actions/download-artifact@v2
       #   with:
