--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,22 +6,37 @@ on:
       - main
 
 jobs:
-  blender:
+  check_if_glb_cached:
     runs-on: ubuntu-latest
-    container: cactice/sverchok:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: install zstd # https://github.com/actions/cache/issues/520#issuecomment-771813238
+      - name: Check Cache
+        id: cache-glb
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{ hashFiles('./sverchok/**') }}-glb
+
+  blender:
+    needs: check_if_glb_cached
+    if: steps.cache-glb.outputs.cache-hit != 'true'
+    runs-on: ubuntu-latest
+    container: cactice/sverchok:latest
+    steps:
+      - name: install zstd
         run: apt-get install -y zstd
-      - name: Cache
+        # Necessary for caching :
+        # https://github.com/actions/cache/issues/520#issuecomment-771813238
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Cache generated glb
         id: cache-glb
         uses: actions/cache@v2
         with:
           path: ./next/public/glb/**
           key: ${{ hashFiles('./sverchok/**') }}-glb
       - name: Generate glb
-        if: steps.cache-glb.outputs.cache-hit != 'true'
         working-directory: ./bpy
         run: |
           blender -P install_sverchok.py -b
@@ -32,8 +47,9 @@ jobs:
       #   with:
       #     name: glb-dir
       #     path: ./next/public/glb/
-  deploy:
+  deploy_cache_refilled:
     needs: [blender]
+    if: steps.cache-glb.outputs.cache-hit != 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -51,6 +67,12 @@ jobs:
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
+      - name: Retrieve cached glbd
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{  hashFiles('./sverchok/**')  }}-glb
+
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -59,17 +81,52 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Cache
-        id: cache-glb
+      - name: Yarn install and build
+        run: |
+          rm ./public/glb/.gitignore
+          yarn install --frozen-lockfile
+          yarn build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./next/out
+
+  # Same job as above but executes on a different condition
+  deploy_cached_glb:
+    needs: [check_if_glb_cached]
+    if: steps.cache-glb.outputs.cache-hit == 'true'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./next
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: "12.x"
+
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Retrieve cached glbd
         uses: actions/cache@v2
         with:
           path: ./next/public/glb/**
           key: ${{  hashFiles('./sverchok/**')  }}-glb
-      # - name: Download glb files
-      #   uses: actions/download-artifact@v2
-      #   with:
-      #     name: glb-dir
-      #     path: ./next/public/glb
+
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
       - name: Yarn install and build
         run: |
