--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,12 +17,9 @@ jobs:
         with:
           path: ./next/public/glb/**
           key: ${{ hashFiles('./sverchok/**') }}-glb
-      - name: set env
-        env:
-          CACHED: ${{ steps.cache-glb.outputs.cache-hit }}
   blender:
-    needs: check_if_glb_cached
-    if: env.CACHED != 'true'
+    needs: [check_if_glb_cached]
+    if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit != 'true'
     runs-on: ubuntu-latest
     container: cactice/sverchok:latest
     steps:
@@ -50,8 +47,8 @@ jobs:
       #     name: glb-dir
       #     path: ./next/public/glb/
   deploy_cache_refilled:
-    needs: [blender]
-    if: env.CACHED != 'true'
+    needs: [check_if_glb_cached]
+    if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit != 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -98,7 +95,7 @@ jobs:
   # Same job as above but executes on a different condition
   deploy_cached_glb:
     needs: [check_if_glb_cached]
-    if: CACHED == 'true'
+    if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
