--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           path: ./next/public/glb/**
           key: ${{ hashFiles('./sverchok/**') }}-glb
+      - name: log
+        run: echo '${{ toJSON(steps.cache-glb.outputs) }}'
 
   blender:
     needs: [check_if_glb_cached]
@@ -24,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     container: cactice/sverchok:latest
     steps:
+      - name: log
+        run: echo '${{ toJSON(needs.check_if_glb_cached.steps.cache-glb.outputs) }}'
       - name: install zstd
         run: apt-get install -y zstd
         # Necessary for caching :
@@ -43,7 +47,7 @@ jobs:
           blender -P json_to_glb.py -b --input_dir=../sverchok/ empty.blend
 
   deploy_cache_refilled:
-    needs: [check_if_glb_cached, blender]
+    needs: [blender]
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -85,27 +89,33 @@ jobs:
   # Same job as above but executes on a different condition
   deploy_cached_glb:
     needs: [check_if_glb_cached]
-    if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./next
     steps:
+      - name: log
+        run: echo '${{ toJSON(needs.check_if_glb_cached.steps.cache-glb.outputs) }}'
       - name: Checkout
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: actions/checkout@v2
       - name: Setup Node
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: actions/setup-node@v2.1.2
         with:
           node-version: "12.x"
       - name: Get yarn cache
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Retrieve cached glbd
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: actions/cache@v2
         with:
           path: ./next/public/glb/**
           key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Cache dependencies
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: actions/cache@v2
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
@@ -113,11 +123,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Yarn install and build
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         run: |
           rm ./public/glb/.gitignore
           yarn install --frozen-lockfile
           yarn build
       - name: Deploy
+        if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
