--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -95,7 +95,7 @@ jobs:
         working-directory: ./next
     steps:
       - name: log
-        run: echo '${{ toJSON(needs.check_if_glb_cached.outputs.CACHED) }}'
+        run: echo '${{ toJSON(needs.check_if_glb_cached) }}'
       - name: Checkout
         if: needs.check_if_glb_cached.steps.cache-glb.outputs.cache-hit == 'true'
         uses: actions/checkout@v2
