--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   check_if_glb_cached:
     runs-on: ubuntu-latest
+    outputs:
+      CACHED: ${{ steps.cache-glb.outputs.cache-hit  }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -17,8 +19,6 @@ jobs:
         with:
           path: ./next/public/glb/**
           key: ${{ hashFiles('./sverchok/**') }}-glb
-      - name: output
-        run: echo '::set-output name=CACHED::${{ steps.cache-glb.outputs.cache-hit }}'
 
   # blender:
   #   needs: [check_if_glb_cached]
