--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -20,7 +20,7 @@ jobs:
           path: ./next/public/glb/**
           key: ${{ hashFiles('./sverchok/**') }}-glb
 
-  blender:
+  regenerate-cache:
     needs: [check_if_glb_cached]
     if: needs.check_if_glb_cached.outputs.cache-hit != 'true'
     runs-on: ubuntu-latest
@@ -44,8 +44,8 @@ jobs:
           blender -P install_sverchok.py -b
           blender -P json_to_glb.py -b --input_dir=../sverchok/ empty.blend
 
-  deploy_cache_refilled:
-    needs: [blender]
+  deploy_cache_reregenerated:
+    needs: [regenerate-cache]
     runs-on: ubuntu-latest
     defaults:
       run:
