--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Check Cache
+      - name: Check Glb Cache
         id: cache-glb
         uses: actions/cache@v2
         with:
@@ -53,6 +53,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Retrieve cached glbd
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
         with:
@@ -60,11 +65,6 @@ jobs:
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Retrieve cached glbd
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
@@ -95,6 +95,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Retrieve cached glbd
+        uses: actions/cache@v2
+        with:
+          path: ./next/public/glb/**
+          key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
         with:
@@ -102,11 +107,6 @@ jobs:
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Retrieve cached glbd
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Cache dependencies
         uses: actions/cache@v2
         with:
