Revert "Add formatting"
This reverts commit f0cbe53629b54695810d065b6c390ca37e6fbbd5.

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Memo original hash
         id: original-hash
-        run: echo "${{format('::set-output name=hash::{0}', hashFiles(./next/public/glb/**))}}""
+        run: echo "::set-output name=hash::${{ hashFiles(./next/public/glb/**) }}"
       - name: Check Glb Cache
         id: cache-glb
         uses: actions/cache@v2
@@ -25,7 +25,7 @@ jobs:
           restore-keys: ${{ hashFiles('./sverchok/**') }}-glb
       - name: Memo restored hash
         id: restored-hash
-        run: echo "${{format('::set-output name=hash::{0}', hashFiles(./next/public/glb/**))}}"
+        run: echo "::set-output name=hash::${{ hashFiles(./next/public/glb/**) }}"
 
   regenerate-cache:
     needs: [check_if_glb_cached]
