--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -73,13 +73,18 @@ jobs:
       - name: Get yarn cache
         id: yarn-cache
         run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Cache dependencies
+      - name: Cache Yarn dependencies
         uses: actions/cache@v2
         with:
           path: ${{ steps.yarn-cache.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - name: Cache Next
+        uses: actions/cache@v2
+        with:
+          path: ./next/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
       - name: Yarn install
         run: yarn install --frozen-lockfile
       - name: Yarn build
