--- a/next/package.json
+++ b/next/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@google/model-viewer": "^1.6.0",
     "@types/gtag.js": "^0.0.4",
+    "glob": "^7.1.6",
     "next": "10.0.8",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^6.11.0",
@@ -24,8 +28,6 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.6",
     "prettier": "^2.1.1",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
   }
 }
