--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -6,54 +6,7 @@ on:
       - main
 
 jobs:
-  check_if_glb_cached:
-    runs-on: ubuntu-latest
-    outputs:
-      cached: ${{ steps.original-hash.outputs.hash != steps.restored-hash.outputs.hash  }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Memo original hash
-        id: original-hash
-        run: echo "::set-output name=hash::${{ hashFiles('./next/public/glb/**') }}"
-      - name: Check Glb Cache
-        id: cache-glb
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{ hashFiles('./sverchok/**') }}-glb-readonly-${{ github.sha }}
-          restore-keys: ${{ hashFiles('./sverchok/**') }}-glb
-      - name: Memo restored hash
-        id: restored-hash
-        run: echo "::set-output name=hash::${{ hashFiles('./next/public/glb/**') }}"
-
-  regenerate-cache:
-    needs: [check_if_glb_cached]
-    if: needs.check_if_glb_cached.outputs.cached == 'false'
-    runs-on: ubuntu-latest
-    container: cactice/sverchok:latest
-    steps:
-      - name: install zstd
-        run: apt-get install -y zstd
-        # Necessary for caching :
-        # https://github.com/actions/cache/issues/520#issuecomment-771813238
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache generated glb
-        id: cache-glb
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{ hashFiles('./sverchok/**') }}-glb
-      - name: Generate glb
-        working-directory: ./bpy
-        run: |
-          # FIXME: install_sverchok.py should be done on docker image and unnecessary here
-          blender -P install_sverchok.py -b
-          blender -P json_to_glb.py -b --input_dir=../sverchok/ empty.blend
-
-  deploy_reregenerated_glb:
-    needs: [regenerate-cache]
+  deploy_sunvox:
     runs-on: ubuntu-latest
     env:
       NODE_ENV: production
@@ -63,58 +16,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Retrieve cached glbd
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{  hashFiles('./sverchok/**')  }}-glb
-      - name: Setup Node
-        uses: actions/setup-node@v2.1.2
-        with:
-          node-version: "12.x"
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Cache Yarn dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: Cache Next
-        uses: actions/cache@v2
-        with:
-          path: ./next/.next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}
-      - name: Yarn install
-        run: yarn install --frozen-lockfile
-      - name: Yarn build
-        run: |
-          rm ./public/glb/.gitignore
-          yarn build
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./next/out
-
-  # Same job as above but executes on a different condition
-  deploy_cached_glb:
-    needs: [check_if_glb_cached]
-    if: needs.check_if_glb_cached.outputs.cached=='true'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./next
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Retrieve cached glbd
-        uses: actions/cache@v2
-        with:
-          path: ./next/public/glb/**
-          key: ${{  hashFiles('./sverchok/**')  }}-glb
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
         with:
