--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -38,9 +38,7 @@ jobs:
       - name: Yarn install
         run: yarn install --frozen-lockfile
       - name: Yarn build
-        run: |
-          rm ./public/glb/.gitignore
-          yarn build
+        run: yarn build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
